--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-reveal": "https://github.com/ahmedsajidh/react-reveal",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
-    "react-typed": "https://github.com/DatableHQ/react-typed",
+    "react-typed": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
